# Attendance

./: docker-compose.yml
src/: pyproject.toml
src/apps/attend/: admin.py  apps.py  models.py  serializers.py  utils.py  views.py
src/apps/attend/migrations/: 0001_initial.py
src/apps/management/management/commands/: create_schema.py
src/config/: settings.py
src/docker/: dockerfile
