[tool.poetry]
name = "attendance"
version = "0.1.0"
description = ""
authors = ["suwalkrizal <krijalsuwal67@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0.1"
uvicorn = "^0.40.0"
psycopg2-binary = "^2.9.11"
djangorestframework = "^3.16.1"
markdown = "^3.10.1"
numpy = "^2.4.1"
face-recognition = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
